examples/invalid/semanticErr/function/functionBadParam.wacc
# function parameter type mismatch
# Output:
# #semantic error#

#Program:#

begin
	int f(int x) is
		return x
	end
	bool b = true ; 
  int x = call f(b) 
end
	
